--- a/index.html
+++ b/index.html
@@ -234,11 +234,9 @@
             </div>
         </div>
     </section>
-
-
-
-
-
+    <footer class="footer text-center">
+        Copyright © 2016-2017 AIChE at UC Davis
+    </footer>
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
