--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <p>Send us your questions through this form here! Alternatively, feel free to e-mail any of our officers.</p>
                 </div>
             </div>
-            <form action="http://formspree.io/ranxie@ucdavis.edu" method=
+            <form action="https://formspree.io/ranxie@ucdavis.edu" method=
             "post">
                 <div class="form-group row">
                     <div class="col-lg-5 col-lg-offset-1 text-center">
@@ -386,7 +386,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.easing/1.3/jquery.easing.1.3.min.js"></script>
     <script src="static/js/scrollreveal.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
