--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Theme CSS -->
     <link href="static/css/style.css" rel="stylesheet">
+    <link href="static/img/logo.png" rel="icon" type="image/png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
