--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link href="static/css/style.css" rel="stylesheet">
     <link href="static/img/logo.png" rel="icon" type="image/png">
 
+    <!-- Favicon -->
+    <link href="static/favicon.ico" rel="icon" type="image/x-icon"/>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
