--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">AIChE UC Davis</a>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +82,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">AIChE UC Davis</h1>
+                <img src="static/img/logo.png" alt="AIChE Logo" id="logo-img">
                 <hr class="light">
                 <p>Welcome to the homepage of the UC Davis student chapter of AIChE</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn More</a>
@@ -287,7 +288,7 @@
 
             <div class="row">
                 <div class="col-lg-12 text-center">
-                <p>We are also looking to fill the position of Secretary, Senior Rep (4x), and Junior Rep. Please contact Randy Xie for more details. </p>
+                <p>We are also looking to fill the position of Senior Representative (2x) and Junior Rep. Please contact Randy Xie for more details. </p>
                 </div>
             </div>
         </div>
