--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <div class="service-box">
                                 <i class="fa fa-4x fa-group text-primary sr-icons"></i>
                                 <h3>Mentorship Program</h3>
-                                <p class="text-muted">Our mentorship program pairs underclassmen and transfer students with upperclassmen mentors and organizes quarterly events (i.e. mentorship dinner,s game nights) that allow mentorship pairs to interact. Mentees can also receive tips regarding classes, resumes, and careers from our mentors.</p>
+                                <p class="text-muted">Our mentorship program pairs underclassmen and transfer students with upperclassmen mentors and organizes quarterly events (i.e. mentorship dinners and game nights) that allow mentorship pairs to interact. Mentees can also receive tips regarding classes, resumes, and careers from our mentors.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 text-center">
