--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <br>
                         <h3>Calendar of Events</h3>
                         <div class="responsive-iframe-container">
-                            <iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=aichementor%40gmail.com&amp;color=%23B1365F&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                            <iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucdavis.edu_69aigp4h69j196g39ka4l9rbsk%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                         </div>
                     </div>
                 </div>
